--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "scripts": {   
     "start": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
-    "build": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
+    //"build": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
+    "build": "react-scripts build"
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
