--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
+    /*"start": "react-scripts start",
+    "build": "react-scripts build",*/
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
